--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </div>
 
             <div class="menu-items">
-                <a href="#" class="menu-item">Home</a>
+                <a href="index.html" class="menu-item">Home</a>
                 <a href="#" class="menu-item">Places</a>
                 <a href="#" class="menu-item">About</a>
                 <a href="#" class="menu-item">Contact Us</a>
-                <a href="#" class="menu-item">Login/Sign Up</a>
+                <a href="login.html" class="menu-item" target="_blank">Login/Sign Up</a>
             </div>
         </aside>
     <button class="menu-btn">
@@ -29,20 +29,19 @@
     </button>
     <div class="container">
         <nav class="navbar">
-            <div class="nav-logo">
-                <p>Voyage Verse</p>
+            <div class="nav-logo"><h2>
+                <p>VoyageVers</p></h2>
             </div>
             <div class="nav-items">
-                <a href="#" class="nav-item">Home</a>
                 <a href="#" class="nav-item">Places</a>
                 <a href="#" class="nav-item">About</a>
                 <a href="#" class="nav-item">Contact Us</a>
-                <a href="#" class="nav-item">Login/Sign Up</a>
+                <a href="login.html" class="nav-item" target="_blank">Login/Sign Up</a>
             </div>
         </nav>
 
         <section class="landing">
-            <h1>Voyage Verse</h1>
+            <h1>Voyage Vers</h1>
             <p>The Only Website</p>
         </section>
     </div>
