--- a/login.html
+++ b/login.html
@@ -9,9 +9,16 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <ul class="nav-list">
+          <li><a href="index.html" target="_parent">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     <section>
         <div class="form-box">
-            <form action="">
+            <form id="LoginForm" action="">
                 <h2>Login</h2>
                 <div class="inputbox">
                     <ion-icon name="mail-outline"></ion-icon>
@@ -27,7 +34,7 @@
                     <label for=""><input type="checkbox" name="checkbox">Remember Me &emsp;</label>
                     <a href="#">Forgot Password</a>
                 </div>
-                <button>Log in</button>
+                <button id="loginButton">Log in</button>
                 <div class="register">
                     <p>Don't have account? <a href="#">Register</a></p>
                 </div>
