--- a/index.html
+++ b/index.html
@@ -5,35 +5,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Menus 01</title>
+    <title>Homepage | VoyageVers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-        <aside class="menu">
-            <div class="menu-header">
-                <p>Navigation</p>
-            </div>
+    <aside class="menu">
+        <div class="menu-header">
+            <p>Navigation</p>
+        </div>
 
-            <div class="menu-items">
-                <a href="index.html" class="menu-item">Home</a>
-                <a href="#" class="menu-item">Places</a>
-                <a href="#" class="menu-item">About</a>
-                <a href="#" class="menu-item">Contact Us</a>
-                <a href="login.html" class="menu-item" target="_blank">Login/Sign Up</a>
-            </div>
-        </aside>
+        <div class="menu-items">
+            <a href="index.html" class="menu-item">Home</a>
+            <a href="#" class="menu-item">Places</a>
+            <a href="#" class="menu-item">About</a>
+            <a href="#" class="menu-item">Contact Us</a>
+            <a href="login.html" class="menu-item" target="_blank">Login/Sign Up</a>
+        </div>
+    </aside>
     <button class="menu-btn">
         <i class="bi bi-list"></i>
     </button>
     <div class="container">
         <nav class="navbar">
-            <div class="nav-logo"><h2>
-                <p>VoyageVers</p></h2>
+            <div class="nav-logo">
+                <h2>
+                    <p>VoyageVers</a></p>
+                </h2>
+
             </div>
             <div class="nav-items">
-                <a href="#" class="nav-item">Places</a>
+                <div class="nav-item">
+                    <a href="#">Places
+                        <ul class="sub-menu">
+                            <li class="sub-item">State 1
+                                <ul class="sub-sub-menu">
+                                    <li class="sub-sub-item">Place 1</li>
+                                    <li class="sub-sub-item">Place 2</li>
+                                    <li class="sub-sub-item">Place 3</li>
+                                </ul>
+                            </li>
+                            <li class="sub-item">State 2
+                                <ul class="sub-sub-menu">
+                                    <li class="sub-sub-item">Place 1</li>
+                                    <li class="sub-sub-item">Place 2</li>
+                                    <li class="sub-sub-item">Place 3</li>
+                                </ul>
+                            </li>
+                            <li class="sub-item">State 3
+                                <ul class="sub-sub-menu">
+                                    <li class="sub-sub-item">Place 1</li>
+                                    <li class="sub-sub-item">Place 2</li>
+                                    <li class="sub-sub-item">Place 3</li>
+                                </ul>
+                            </li><li class="sub-item">State 4
+                                <ul class="sub-sub-menu">
+                                    <li class="sub-sub-item">Place 1</li>
+                                    <li class="sub-sub-item">Place 2</li>
+                                    <li class="sub-sub-item">Place 3</li>
+                                </ul>
+                            </li><li class="sub-item">State 5
+                                <ul class="sub-sub-menu">
+                                    <li class="sub-sub-item">Place 1</li>
+                                    <li class="sub-sub-item">Place 2</li>
+                                    <li class="sub-sub-item">Place 3</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </a>    
+                </div>
                 <a href="#" class="nav-item">About</a>
                 <a href="#" class="nav-item">Contact Us</a>
                 <a href="login.html" class="nav-item" target="_blank">Login/Sign Up</a>
