--- a/index.html
+++ b/index.html
@@ -1,107 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage | VoyageVers</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/ebf7970d3f.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <aside class="menu">
-        <div class="menu-header">
-            <p>Navigation</p>
-        </div>
+  <div class="Madhya-pradesh">
+    <h1>MADHYA PRADESH</h1>
+    <hr>
+    <h2>1.PANCHMARHI</h2>
+    <img src="Panchmarhi.jpg" alt="">
+    <h3>Pachmarhi is a hill station in the Narmadapuram district of Madhya Pradesh state of central India. It has been the location of a cantonment (Pachmarhi Cantonment) since British Raj.
 
-        <div class="menu-items">
-            <a href="index.html" class="menu-item">Home</a>
-            <a href="#" class="menu-item">Places</a>
-            <a href="#" class="menu-item">About</a>
-            <a href="#" class="menu-item">Contact Us</a>
-            <a href="login.html" class="menu-item" target="_blank">Login/Sign Up</a>
-        </div>
-    </aside>
-    <button class="menu-btn">
-        <i class="bi bi-list"></i>
-    </button>
-    <div class="container">
-        <nav class="navbar">
-            <div class="nav-logo">
-                <h2>
-                    <p>VoyageVers</a></p>
-                </h2>
+      It is widely known as Satpura ki Rani ("Queen of Satpura"), situated at the height of 1067 m in a valley of the Satpura Range in the Narmadapuram district. Dhupgarh, the highest point (1,352 m) in Madhya Pradesh and the Satpura range, is located here. It is a part of the Satpura Biosphere Reserve. It is also famous for the Satpura Tiger Reserve, Satpura National Park, Lord Shiva and the Pandavas of Mahabharata.</h3>
+    <hr><h2>HOTELS</h2>
+    <img src="Hotels1.png" alt="">
+    <hr>
+    <h2>HOW TO REACH</h2>
+    <h3>By Air:</h3> 
+    <p>The nearest airport to reach Pachmarhi is in Bhopal, which is around 195 km away from this hill station. There are regular flights from Bhopal that connect it from cities like Delhi, Gwalior, Mumbai, etc. One can easily get a taxi or bus from the airport to reach Pachmarhi</p>
 
-            </div>
-            <div class="nav-items">
-                <div class="nav-item">
-                    <a href="#">Places
-                        <ul class="sub-menu">
-                            <li class="sub-item">State 1
-                                <ul class="sub-sub-menu">
-                                    <li class="sub-sub-item">Place 1</li>
-                                    <li class="sub-sub-item">Place 2</li>
-                                    <li class="sub-sub-item">Place 3</li>
-                                </ul>
-                            </li>
-                            <li class="sub-item">State 2
-                                <ul class="sub-sub-menu">
-                                    <li class="sub-sub-item">Place 1</li>
-                                    <li class="sub-sub-item">Place 2</li>
-                                    <li class="sub-sub-item">Place 3</li>
-                                </ul>
-                            </li>
-                            <li class="sub-item">State 3
-                                <ul class="sub-sub-menu">
-                                    <li class="sub-sub-item">Place 1</li>
-                                    <li class="sub-sub-item">Place 2</li>
-                                    <li class="sub-sub-item">Place 3</li>
-                                </ul>
-                            </li><li class="sub-item">State 4
-                                <ul class="sub-sub-menu">
-                                    <li class="sub-sub-item">Place 1</li>
-                                    <li class="sub-sub-item">Place 2</li>
-                                    <li class="sub-sub-item">Place 3</li>
-                                </ul>
-                            </li><li class="sub-item">State 5
-                                <ul class="sub-sub-menu">
-                                    <li class="sub-sub-item">Place 1</li>
-                                    <li class="sub-sub-item">Place 2</li>
-                                    <li class="sub-sub-item">Place 3</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </a>    
-                </div>
-                <a href="#" class="nav-item">About</a>
-                <a href="#" class="nav-item">Contact Us</a>
-                <a href="login.html" class="nav-item" target="_blank">Login/Sign Up</a>
-            </div>
-        </nav>
+    <h3>By Railway:</h3> 
+    <p>The nearest airport is at Pipariya, which is an adjacent railhead, located at a distance of 47 km from Pachmarhi. It connects to main Indian railway lines like Mumbai's Mahanagari Exp, Kolkata Mail, Chennai's Gangakaveri Exp, and Bangalore's Sangha Mitra Exp. One can book a cab from this railway head to reach their desired location in Pachmarhi</p>
 
-        <section class="landing">
-            <h1>Voyage Vers</h1>
-            <p>The Only Website</p>
-        </section>
-    </div>
+    <h3>By Road:</h3> 
+    <p>There are frequent bus services from Pachmarhi to Bhopal, Pipariya, and Chhindwara. The route through road is convenient if you are travelling on your own via car.</p>
+  </div>
+  <hr>
+  <div class="photo-upload">
+    <h2>UPLOAD THE BEST PHOTO WHEN YOU VISIT PANCHMARHI</h2>
+    <div class="display"></div>
+    <input type="file"  id="upload">
+    <label for="upload">
+        <i class="fa-solid fa-cloud-arrow-up"></i>
+        CHOOSE YOUR PHOTO
+    </label>
+  <script src="app.js"></script>
+  </div>
+  <hr>
+  <div class="Madhya-pradesh">
+    <h2>2.ORCHHA</h2>
+    <img src="orchha.jpg" alt="">
+    <h3>Orchha is a town, near city of Niwari in Niwari district of Madhya Pradesh state, India. The town was established by rajput ruler Rudra Pratap Singh some time after 1501, as the seat of an eponymous former princely state of covering parts of central & north India, in the Bundelkhand region.Orchha lies on the Betwa River, 80 km from Tikamgarh & 15 km from Jhansi in Uttar Pradesh.</h3>
+    <hr><h2>HOTELS</h2>
+    <img src="hotels2.png" alt="">
+    <hr>
+    <h2>HOW TO REACH</h2>
+    <h3>By Air:</h3> 
+    <p>There is no direct flight connectivity to Orchha. The nearest airport is in Gwalior, some 140 away from the same.</p>
 
-    <section class="section">
-        <h1>Section 2</h1>
-        <p>Menu icon will Pop up in the top-right</p>
-    </section>
+    <h3>By Railway:</h3> 
+    <p>Orchha has its own railway station, but the nearest major railway station is at Jhansi (15 km). Travelling from Jhansi to Orchha can be done in two way- you can either take an auto-rickshaw or go for a more expensive but comfortable cab.</p>
 
-    <section class="section">
-        <h1>Section 3</h1>
-    </section>
-    <section class="section">
-        <h1>Section 4</h1>
-    </section>
+    <h3>By Road:</h3> 
+    <p>There is no direct road connectivity to Orchha. Jhansi is the nearest bus stop, 16 km away from the same.</p>
+  </div>
+  <hr>
+  <div class="photo-upload">
+    <h2>UPLOAD THE BEST PHOTO WHEN YOU VISIT ORCHHA</h2>
+    <div class="display"></div>
+    <input type="file"  id="upload">
+    <label for="upload">
+        <i class="fa-solid fa-cloud-arrow-up"></i>
+        CHOOSE YOUR PHOTO
+    </label>
+  <script src="app.js"></script>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="./script.js"></script>
 </body>
-
 </html>
